--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '122527964597954', // App ID
-      channelUrl : 'http://aryavart.co.nr/channel.html', // Channel File
+      channelUrl : 'http://frozen-dawn-1743.herokuapp.com/channel.html', // Channel File
       status     : true, // check login status
       cookie     : true, // enable cookies to allow the server to access the session
       xfbml      : true  // parse XFBML
